[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_boomtokn"
version = "0.0.1"
authors = [
  { name = "David okeamah", email = "Marinachris112@outlook.com" },
]
description = "A small example package by Boomtokn"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/Boomtokn/boom-content-agent-"
Issues = "https://github.com/Boomtokn/boom-content-agent-/issues"
